<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutMeetingLocation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10dp"
    android:background="@drawable/bg_recycle_view"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewTaskLocation"
        android:layout_width="@dimen/_20dp"
        android:layout_height="@dimen/_20dp"
        android:layout_margin="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_task_location" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewMeetingMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:text="@string/dummy_meeting_message"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toEndOf="@id/imageViewTaskLocation"
        app:layout_constraintTop_toTopOf="@id/imageViewTaskLocation" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/label_date"
        android:textColor="@color/colorLightBlack"
        app:layout_constraintStart_toStartOf="@id/textViewMeetingMessage"
        app:layout_constraintTop_toBottomOf="@id/textViewMeetingMessage" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewWeather"
        android:layout_width="@dimen/_30dp"
        android:layout_height="@dimen/_30dp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintStart_toStartOf="@id/textViewDate"
        app:layout_constraintTop_toBottomOf="@id/textViewDate"
        app:srcCompat="@drawable/ic_weather" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5dp"
        android:text="@string/label_weather"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageViewWeather"
        app:layout_constraintStart_toEndOf="@id/imageViewWeather"
        app:layout_constraintTop_toTopOf="@id/imageViewWeather" />

    <View
        android:id="@+id/viewDottedLine"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_7dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_10dp"
        android:background="@drawable/line_dotted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/imageViewWeather"
        app:layout_constraintTop_toBottomOf="@id/imageViewWeather" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/label_address"
        android:textColor="@color/colorLightBlack"
        app:layout_constraintStart_toStartOf="@id/viewDottedLine"
        app:layout_constraintTop_toBottomOf="@id/viewDottedLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_distance"
        android:textColor="@color/colorLightBlack"
        app:layout_constraintStart_toStartOf="@id/textViewAddress"
        app:layout_constraintTop_toBottomOf="@id/textViewAddress" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_30dp"
        android:layout_height="@dimen/_30dp"
        android:layout_marginBottom="@dimen/_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/viewDottedLine"
        app:layout_constraintTop_toTopOf="@id/textViewAddress"
        app:srcCompat="@drawable/ic_location" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayoutOptionMenu"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@drawable/bg_transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewDelete"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintBottom_toTopOf="@id/textViewDelete"
            app:layout_constraintEnd_toStartOf="@id/imageViewComplete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_delete" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_delete"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/imageViewDelete"
            app:layout_constraintStart_toStartOf="@id/imageViewDelete"
            app:layout_constraintTop_toBottomOf="@id/imageViewDelete" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewComplete"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            app:layout_constraintEnd_toStartOf="@id/imageViewShare"
            app:layout_constraintStart_toEndOf="@id/imageViewDelete"
            app:layout_constraintTop_toTopOf="@id/imageViewDelete"
            app:srcCompat="@drawable/ic_rigth_red" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_complete"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="@id/imageViewComplete"
            app:layout_constraintStart_toStartOf="@id/imageViewComplete"
            app:layout_constraintTop_toBottomOf="@id/imageViewComplete"
            app:layout_constraintTop_toTopOf="@id/textViewDelete" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewShare"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageViewComplete"
            app:layout_constraintTop_toTopOf="@id/imageViewComplete"
            app:srcCompat="@drawable/ic_share" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_share"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="@id/imageViewShare"
            app:layout_constraintStart_toStartOf="@id/imageViewShare"
            app:layout_constraintTop_toBottomOf="@id/imageViewShare"
            app:layout_constraintTop_toTopOf="@id/textViewComplete" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>