<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    tools:context=".ui.authentication.fragment.SignUpFragment">


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonImageClose"
        android:layout_width="@dimen/_15dp"
        android:layout_height="@dimen/_15dp"
        android:layout_margin="@dimen/_20dp"
        android:src="@drawable/ic_close"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewPerson"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:layout_marginTop="@dimen/_40dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonImageClose"
        app:srcCompat="@drawable/ic_person" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewGoodName"
        style="@style/Widget.BaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/label_good_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewPerson" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextFirstName"
        style="@style/Widget.BaseEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName|textCapSentences"
        android:paddingTop="@dimen/_15dp"
        android:paddingBottom="@dimen/_15dp"
        android:paddingStart="@dimen/_20dp"
        android:paddingEnd="@dimen/_0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewGoodName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextLastName"
        style="@style/Widget.BaseEditText"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:hint="@string/label_last_name"
        android:inputType="textPersonName|textCapSentences"
        android:paddingTop="@dimen/_15dp"
        android:paddingBottom="@dimen/_15dp"
        android:paddingStart="@dimen/_20dp"
        android:paddingEnd="@dimen/_0dp"
        app:layout_constraintEnd_toEndOf="@id/editTextFirstName"
        app:layout_constraintStart_toStartOf="@id/editTextFirstName"
        app:layout_constraintTop_toBottomOf="@id/editTextFirstName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTeamCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_tearm_condition"
        style="@style/AppTheme.AppTextView.PrivatePolicy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewRight"
        android:layout_width="@dimen/_90dp"
        android:layout_height="@dimen/_90dp"
        android:layout_marginTop="@dimen/_20dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/textViewTeamCondition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextLastName"
        app:srcCompat="@drawable/ic_right" />


</androidx.constraintlayout.widget.ConstraintLayout>