<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    tools:context=".ui.authentication.fragment.PhoneVerificationFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buttonImageClose"
        android:layout_width="@dimen/_15dp"
        android:layout_height="@dimen/_15dp"
        android:layout_margin="@dimen/_20dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/ic_close"
        android:tint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewPhoneDial"
        android:layout_width="@dimen/_90dp"
        android:layout_height="@dimen/_90dp"
        android:layout_marginTop="@dimen/_40dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonImageClose"
        app:srcCompat="@drawable/ic_phone_dial" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewPhoneVerification"
        style="@style/Widget.BaseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/label_phone_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewPhoneDial" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewMessageOtpSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/_5dp"
        android:text="@string/message_otp_send"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPhoneVerification" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextOtpOne"
        style="@style/AppTheme.AppEditText.Otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_opt"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toStartOf="@id/editTextOtpTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMessageOtpSend" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextOtpTwo"
        style="@style/AppTheme.AppEditText.Otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_opt"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toStartOf="@id/editTextOtpThree"
        app:layout_constraintStart_toEndOf="@id/editTextOtpOne"
        app:layout_constraintTop_toBottomOf="@id/textViewMessageOtpSend" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextOtpThree"
        style="@style/AppTheme.AppEditText.Otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_opt"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toStartOf="@id/editTextOtpFour"
        app:layout_constraintStart_toEndOf="@id/editTextOtpTwo"
        app:layout_constraintTop_toBottomOf="@id/textViewMessageOtpSend" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextOtpFour"
        style="@style/AppTheme.AppEditText.Otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_opt"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextOtpThree"
        app:layout_constraintTop_toBottomOf="@id/textViewMessageOtpSend" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewResendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:drawableStart="@drawable/ic_rotate"
        android:drawablePadding="@dimen/_10dp"
        android:text="@string/label_resend_code"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="@id/editTextOtpFour"
        app:layout_constraintTop_toBottomOf="@id/editTextOtpFour" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageButtonNextScreen"
        android:layout_width="@dimen/_90dp"
        android:layout_height="@dimen/_90dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toTopOf="@id/textViewTeamCondition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewResendCode" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTeamCondition"
        style="@style/AppTheme.AppTextView.PrivatePolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_tearm_condition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>